                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 05-02-2005 changed: High quality pixel shader uses less memory.  Drops down to medium quality shader in GUI mode.
  - 05-02-2005 added: New medium quality Pixel shader.  Uses only 1 pass, and very little memory
  - 04-02-2005 fixed: added font files that was missing in new mplayer directory (thx to Diontae16)
  - 04-02-2005 added: windows media player playlists
  - 04-02-2005 fixed: subtitle/osd crash with high quality pixel shader
  - 04-02-2005 added: High quality pixel shader YV12->RGB method :)  Known issues with switching to/from GUI
  - 03-02-2005 changed: delay when changing resolution in settings (easier resolution selection)
  - 03-02-2005 fixed: sometimes unreadable discs will be detected as audio cd's
  - 03-02-2005 fixed: [ 1095048 Part 2 ] Icon for folder displayed using XBE's icon (also fixed some stupidities).
  - 02-02-2005 updated: Italian language file (Thnx to kotix)
  - 02-02-2005 updated: German language file
  - 02-02-2005 updated: Finnish language file (Thnx to jutski)
  - 02-02-2005 updated: Norwegian language file (Thnx to vnmartinsen)
  - 02-02-2005 changed: removed libcdrip from project, libcdio replaces it
  - 02-02-2005 changed: cd ripper now uses libcdio for ripping
  - 02-02-2005 changed: cdda player is now based on libcdio 
  - 02-02-2005 updated: libcdio to version 0.72
  - 02-02-2005 added: Profile overwrite + context menu in profilewindow for overwrite/rename/delete.
  - 01-02-2005 added: mplayer support for new system\players directory structure, enable Alternate mplayer core in settings to use it.